--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
 
-@media (max-width: 712px) {
+@media (min-width: 1440px) {
     header {
         width: 100%;
+    }
 
+    footer {
+        width: 100%;
     }
 }
 
