--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 
 @media screen and (max-width: 1440px) {
     header {
-        width: 100%;
         background-color: gray;
         border: 5px solid black;
         color: white;
+        max-width: 100%;
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-between;
