try width for smartphones

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 
-@media screen and (max-width: 1440px) {
+@media screen{
     header {
         background-color: gray;
         border: 5px solid black;
