try width for smartphones

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-
-@media screen{
+@media screen {
     header {
         background-color: gray;
         border: 5px solid black;
@@ -9,7 +8,11 @@
         flex-flow: row nowrap;
         justify-content: space-between;
         align-items: center;
-        order: 1;
+    }
+
+    .content {
+        display: flex;
+        flex-flow: column nowrap;
     }
 
     a {
@@ -37,7 +40,7 @@
     .table {
         border: 1px solid black;
         max-width: 500px;
-        order: 2;
+        order: 1;
     }
 }
 
