--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@media screen and (orientation: portrait){
+@media screen and (max-width: 479px){
     header {
         background-color: gray;
         border: 5px solid black;
